test(test-util): extend the summary for jobs in `CompactRecordLogger` by the `jobKind` value